# awesome

./: .pdm.toml  README.md  block_template.jinja2  content.yaml  manifest.yaml  pack.py  parser.py  pyproject.toml  render.py  spec.md  specs.py  visitor.py
.github/ISSUE_TEMPLATE/: add_to_list.yml
.github/workflows/: pr.yml  render.yml
specs/: python.yaml  rust.yaml  rust.yml
templates/: awesome_list_file.jinja2  block.jinja2  group.jinja2  header.jinja2  item.jinja2
templates2/: item.jinja2  lastitem.jinja2  list_items.jinja2
