[project]
name = "shach_awesome"
version = "0.0.1"
description = "Builder for Shacham's awesome list."

dependencies = []
requires-python = ">=3.10"
license = { text = "MIT" }

[[project.authors]]
name = "Shacham Ginat"
email = "shacham6@gmail.com"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
